--- a/.gitignore
+++ b/.gitignore
@@ -18277,3 +18277,209 @@ original.png
 ./.Rproj.user/shared/notebooks/63A8CD40-day20_osm/1/s/cpvpm7e7prl9j/00003f.snapshot
 ./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/2A616F33eae359fe/cm3k71lfwadom/000012.snapshot
 ./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/s/cm3k71lfwadom/00002a.snapshot
+./2022/day20_my_favourite/day20_my_favourite.png
+./2022/day7_raster/predictions.RData
+./2022/day4_color_friday_green/day4_color_friday_green.png
+./2022/day4_color_friday_green/base_map.png
+./2022/day4_color_friday_green/data/ms.RData
+./2022/day12_scale/day12_scale.png
+./2022/day28_3D/data/s.RData
+./2022/day28_3D/data/or_d.RData
+./2022/day28_3D/data/renderings/universe_artsy.png
+./2022/day28_3D/data/renderings/universe359.png
+./2022/day28_3D/data/renderings/universe360.png
+./2022/day15_food_drink/chronicgdaytotpop.xlsx
+./2022/day3_polygons/data/private_h_insurance_f.RData
+./2022/day3_polygons/data/private_h_insurance_m.RData
+./2022/day14_hexagons/data/tarr.RData
+./2022/day14_hexagons/covid_cases_by_County.csv
+./2022/day29_out_comfort_zone/basemap.png
+./2022/day29_out_comfort_zone/day29_out_comfort_zone.png
+./2022/day5_ukraine/data/tif_data/10_SRC_y50x30.kml
+./2022/day5_ukraine/data/tif_data/10_SRC_y50x20.kml
+./2022/day5_ukraine/data/tif_data/10_SRC_y40x30.kml
+./2022/day5_ukraine/data/tif_data/10_DEM_y40x20.tif
+./2022/day5_ukraine/data/tif_data/10_DEM_y40x30.tif
+./2022/day5_ukraine/data/raster_data/UKR_adm0.shp
+./2022/day5_ukraine/day5_ukraine.png
+./2022/day21_kontur_pop_dataset/day21_kontour_pop_dataset.png
+./2022/day21_kontur_pop_dataset/data/kontour_pop_cr
+./2022/day21_kontur_pop_dataset/data/kontour_pop_cr.zip
+./2022/day6_network/data/ny_tract_full.RData
+./2022/day6_network/data/zip_code_040114.geojson
+./2022/day2_lines/day2_lines.png
+./2022/day2_lines/data/my_rivers.RData
+./2022/day2_lines/data/HydroRIVERS.RData
+./2022/day18_color_friday_blue/base_map.png
+./2022/day18_color_friday_blue/data/streets.RData
+./2022/day18_color_friday_blue/data/small_streets.RData
+./2022/day8_openstreetmap/data/streets.RData
+./2022/day8_openstreetmap/data/small_streets.RData
+./2022/day8_openstreetmap/data/base_map.png
+./2022/day26_islands/day26_islands2.png
+./2022/day26_islands/data/islands1.png
+./2022/day26_islands/data/bayofislands.jpeg
+./2022/collage/collage2022.png
+./2024/day20_osm/data/streets.RDS
+./2024/day20_osm/data/small_streets.RDS
+./2024/day17_collaborative_map/day17_collaborative_map.png
+./2024/day4_hexagons/day4_hexagons.png
+./2024/day27_micromapping/day27_micromapping.png
+./2024/day26_map_projections/data/world.rds
+./2024/day11_artic/day11_artic.png
+./2024/day10_pen&paper/day10_pen&paper.jpg
+./2024/day29_overture/day29_overture.png
+./2024/day29_overture/data/overture-15.73-48.855200000000735-2.3417000000001735.geojson
+./2024/day2_lines/data/ne_10m_rivers_lake_centerlines.zip
+./2024/day2_lines/data/ne_10m_rivers_lake_centerlines/ne_10m_rivers_lake_centerlines.shp
+./2024/day2_lines/data/ne_10m_rivers_lake_centerlines/ne_10m_rivers_lake_centerlines.dbf
+./2024/day22_two_colors/day22_two_colors.png
+./2024/collage/collage2024.png
+./2023/day27_dot/day27_dot.png
+./2023/day27_dot/data/WorldCover_trees_30s.tif
+./2023/day21_raster/data/SR_50M_alaska_nad.tif
+./2023/day21_raster/day21_raster.png
+./2023/day23_3D/original.png
+./2023/day23_3D/day23_3D.png
+./2023/day17_flow/day17_flow.png
+./2023/day25_antarctica/data/g.rds
+./2023/day11_retro/data/german_empire_1945/German_Empire_1945_v.1.0.shp
+./2023/day11_retro/data/germany_1989/Germany_1989_v.1.0.shp
+./2023/day11_retro/data/german_empire_1871/German_Empire_1871_v.1.0.shp
+./2023/day2_lines/data/cdl_30m_r_ny_2022_utm18.tif
+./2023/day10_north-america/data/EventMapLayer.kml
+./2023/day15_openstreetmap/day15_openstreetmap.png
+./2023/day7_navigation/data/3D flights of European free-tailed bats.csv
+./2023/collage/collage2023.png
+./2023/day18_atmosphere/day18_atmosphere.png
+./images/30dmc_2023.png
+./images/30dmc_2024.png
+./2021/day25_interactive/interactive.png
+./2021/day15_nopc/IMG_1518.JPG
+./2021/day20_movement/movement.png
+./2021/day20_movement/movement_alitalia.png
+./2021/day22_boundaries/boundaries.png
+./2021/day5_osm/osmdata.png
+./2021/day24_historical/historical.png
+./2021/day8_blue/raster/IDE00422.202111072100.tiff
+./2021/day8_blue/raster/IDE00421.202111072100.tiff
+./2021/day4_hexagons/boston_city.png
+./2021/day4_hexagons/hexagons.png
+./2021/day14_newtool/newtool.png
+./2021/day21_elevation/elevation.png
+./2021/day28_earth_not_flat/earth_not_flat.png
+./2021/day27_heatmap/heatmap.png
+./2021/day30_metamapping/metamapping.png
+./2021/day26_choropleth/choropleth.png
+./2021/day12_population/world_map.png
+./2021/day18_water/water.png
+./2021/day6_red/drought_red.gif
+./2021/day17_land/land_smaller.png
+./2021/day17_land/land.png
+./2021/day17_land/unfolded.png
+./2021/day29_null/NULL.png
+./2021/day10_raster/raster2.png
+./2021/collage/collage2021.png
+./2021/day11_3D/IDE00427.202111110800.tif
+./2021/day11_3D/3D.png
+./2021/day11_3D/world_3D.png
+./.git/objects/61/22d5dfc788723319dd7ddfd207df768688d914
+./.git/objects/50/4c1249c247a3bf2b2f37de9bc4cfcf50b1665a
+./.git/objects/3b/86e82aa560303ccf03ac7cd50bf3fa1f090839
+./.git/objects/32/8f45b81167f848e83197f199fe2cbfc7c07fec
+./.git/objects/35/61a3600f1c80b874f22a8de510766ddba5f8b7
+./.git/objects/35/4a46caaca632b2435621ba544c0eebafb203ce
+./.git/objects/5a/434cdc6d524533a419dd6f8e411d0ca55b83d9
+./.git/objects/5f/710c5f62d284ccbc203b71c4c616c1d3e17285
+./.git/objects/a3/f70aef147ed921b47690f0839d6ef3b4b742f3
+./.git/objects/b2/338d33f03ebab120d8acd1167f675791febea3
+./.git/objects/b2/a8e4f7d4aefe8d9df43b7fc39dbb305750f4c1
+./.git/objects/d0/25d9818551f0f7c0c6d7082148c6e4c64a2b86
+./.git/objects/be/13d35fa81248a33c6cbe71ec424aab2763ac41
+./.git/objects/b3/49efdb16bd5a9b151fa36c7ebb0b8a867998a4
+./.git/objects/b3/ee6de244e317a572b4b9dded585c917b5ae98b
+./.git/objects/d8/1c1cf5bc58254560d6f2a57e93271d8dc84782
+./.git/objects/e2/9a7c39368cdd7ac39323f5e94de45f6d7f6e7a
+./.git/objects/fd/cf5e09ee8231cc099c9aa1cc0ed63ca1bd1ab0
+./.git/objects/c8/fad428b39cfe1849738f7e06590a7ed8448d99
+./.git/objects/c8/cf8046d9c88441c83172314140d05b1c2d918e
+./.git/objects/27/7633d9412f852adc1aaa706f92544369baf8b9
+./.git/objects/pack/pack-2f10c4ba9de446d3b68d41fc32fd5ad6558f152e.pack
+./.git/objects/29/d77c21f6528b65d9cc9714d3072d0542df0589
+./.git/objects/45/ef5b470228a1e27d1dda212af0500e32b523d3
+./.git/objects/87/3a452f25de57041310daedb7ab3a1ef0c29da9
+./.git/objects/74/aa8f586f22e8c0ccb4503c824454be19c49570
+./.git/objects/8a/882bad46f9b1c86f5b2586f4896ed03139692d
+./.git/objects/6b/9a34539558f57def8fd4844ae983626dfefbcc
+./.git/objects/38/f802c6ae9d76707b678719bb5a52f348d20e3c
+./.git/objects/6e/abaa14906d8b9bf5361944f8f060b541618ff1
+./.git/objects/6e/9adef620c048526d4de0055e3137d94adf643d
+./.git/objects/5d/a8a056f86e79e53da7fffe9b8fdccd6153a169
+./.git/objects/31/d78c36103f88d56aeb40e62db4206b91c0caf2
+./.git/objects/91/2bc0cc901177b583a6b2104a0d28262eb350b2
+./.git/objects/37/23bbfb95367354ba484a7e546047d0c100b327
+./.git/objects/bf/ebbaf428c810f085688e268082ca6de9a447af
+./.git/objects/d3/63f0e4a36b05cd418dc19d9354b2d81f73c094
+./.git/objects/ba/fe62bbd7d7c51fef04c1343dca324db960685e
+./.git/objects/b1/7bd6c646e175c89d055093277afc30c019f477
+./.git/objects/dc/06c216c272ae860a729b95e9cdff6fd6e37c9a
+./.git/objects/dc/7ed2ec62751bf0c1a113b9ec7ac979ae5d6a78
+./.git/objects/b6/398c322deacbc2e470c0eebf5ac0525c168286
+./.git/objects/b6/c5471d607e12643c0ced93898d474b93216648
+./.git/objects/aa/e14fe18278bae82c79cad9341b57ccbaba33a3
+./.git/objects/aa/9979fe33463bc55d1c2c25c73e80492cd00755
+./.git/objects/db/23bc2130a89ebc1f74d5ef4b206df19f54e78e
+./.git/objects/cd/c610569bb42bc435714a25ecbef99acd105eac
+./.git/objects/f0/f18e434f5992656cac8b3127d85c7a62847d64
+./.git/objects/46/5807cf1e2fbded2104465998d766c9124768dd
+./.git/objects/41/b83c552072e0313f9859239d76a59cad8201ea
+./.git/objects/84/36a76eac98055e39c276e32db4e8108308d9ee
+./.git/objects/4a/ccf92536665f60832bc73377e4df3b8024ea55
+./.git/objects/25/3e1667e1609915d4788954e2b2a0eb6d59aca4
+./.Rproj.user/shared/notebooks/99517FAA-day28_the_blue_planet/1/s/ch83bwninca36/000006.snapshot
+./.Rproj.user/shared/notebooks/AC93E7DE-day5_a-journey/1/s/ckc8urkcj1o2n/000019.snapshot
+./.Rproj.user/shared/notebooks/AC93E7DE-day5_a-journey/1/s/cx4s9lwumbxme/00000a.snapshot
+./.Rproj.user/shared/notebooks/5B857ECA-day23_memory/1/s/cy6usohfv3sjd/00002a.snapshot
+./.Rproj.user/shared/notebooks/8852C9D6-14-covid19/1/s/cyobroej9hwxa/000012.snapshot
+./.Rproj.user/shared/notebooks/8852C9D6-14-covid19/1/s/cyobroej9hwxa/000010.snapshot
+./.Rproj.user/shared/notebooks/8852C9D6-14-covid19/1/s/c30kfo5putkum/000010.snapshot
+./.Rproj.user/shared/notebooks/8852C9D6-14-covid19/1/s/cnm9dcj4xxwt8/000010.snapshot
+./.Rproj.user/shared/notebooks/08D33BAC-day30_the_final_map/1/s/c5aibzttgtqxz/000016.snapshot
+./.Rproj.user/shared/notebooks/90AF16E3-day25_heat/1/s/copj27fkeysu1/00001c.snapshot
+./.Rproj.user/shared/notebooks/90AF16E3-day25_heat/1/s/ctj30uop76dh6/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cgpnln4mgdx0h/000012.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/c0plv352cev1u/000016.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cxe8hqj0uif00/00001c.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cut0p7jy4lyua/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cu866rx66htko/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/crtvxts89oqdx/000003.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/czli8o6vasjl1/000014.rdf
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/c2eryhatfco2k/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/c0efivn537vv0/000012.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/czj7umzbx1ocb/000002.snapshot
+./.Rproj.user/shared/notebooks/3AB642D4-day27_micromapping/1/s/cbhk8iztkqwgj/00004b.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/cb2orus6n566w/000012.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/c749ern8nwdx5/000010.rdf
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/c1eswgchzcoir/000010.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/cnl8a7gwntxxw/000010.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/cc8eag5l25oft/000010.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/chup3bj0scdmo/000014.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/cvt4tolw5wu3m/000011.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/ctv5os5shqaf7/000012.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/c8tn21o37lq29/000018.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/c9o8n7hogck71/000028.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/cfsmx7hlrqkbp/000002.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/c85p8ppaolejk/000011.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/csrkkl794etub/000002.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/co98wo4qb07ei/000002.snapshot
+./.Rproj.user/shared/notebooks/18BC8A47-day21_conflicts/1/s/cb83dxl6nbg9d/000045.snapshot
+./.Rproj.user/shared/notebooks/18BC8A47-day21_conflicts/1/s/cw6hkw0yjmt13/000012.snapshot
+./.Rproj.user/shared/notebooks/CCC63F34-day16_choropleth_map/1/s/cpfve80qdi5og/00004b.snapshot
+./.Rproj.user/shared/notebooks/CCC63F34-day16_choropleth_map/1/s/czb5olbqu8lan/00002f.snapshot
+./.Rproj.user/shared/notebooks/69A25704-day9_ai/1/s/coiequd2w7eam/000018.snapshot
+./.Rproj.user/shared/notebooks/8E50AC33-day24_only_circular_shapes/1/s/cm16v0qlspzg3/000010.snapshot
+./.Rproj.user/shared/notebooks/8266D3CE-day7_vintage/1/s/cn2wkpemjsa8q/00001d.snapshot
+./.Rproj.user/shared/notebooks/63A8CD40-day20_osm/1/s/ck18zwkkm4f3j/000023.snapshot
+./.Rproj.user/shared/notebooks/63A8CD40-day20_osm/1/s/cpvpm7e7prl9j/00003f.snapshot
+./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/2A616F33eae359fe/cm3k71lfwadom/000012.snapshot
+./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/s/cm3k71lfwadom/00002a.snapshot
