--- a/.gitignore
+++ b/.gitignore
@@ -26622,3 +26622,198 @@ original.png
 ./.Rproj.user/shared/notebooks/63A8CD40-day20_osm/1/s/cpvpm7e7prl9j/00003f.snapshot
 ./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/2A616F33eae359fe/cm3k71lfwadom/000012.snapshot
 ./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/s/cm3k71lfwadom/00002a.snapshot
+./2022/day20_my_favourite/day20_my_favourite.png
+./2022/day7_raster/predictions.RData
+./2022/day4_color_friday_green/day4_color_friday_green.png
+./2022/day4_color_friday_green/base_map.png
+./2022/day4_color_friday_green/data/ms.RData
+./2022/day12_scale/day12_scale.png
+./2022/day28_3D/data/s.RData
+./2022/day28_3D/data/or_d.RData
+./2022/day28_3D/data/renderings/universe_artsy.png
+./2022/day28_3D/data/renderings/universe359.png
+./2022/day28_3D/data/renderings/universe360.png
+./2022/day15_food_drink/chronicgdaytotpop.xlsx
+./2022/day3_polygons/data/private_h_insurance_f.RData
+./2022/day3_polygons/data/private_h_insurance_m.RData
+./2022/day14_hexagons/data/tarr.RData
+./2022/day14_hexagons/covid_cases_by_County.csv
+./2022/day29_out_comfort_zone/basemap.png
+./2022/day29_out_comfort_zone/day29_out_comfort_zone.png
+./2022/day5_ukraine/data/tif_data/10_SRC_y50x30.kml
+./2022/day5_ukraine/data/tif_data/10_SRC_y50x20.kml
+./2022/day5_ukraine/data/tif_data/10_SRC_y40x30.kml
+./2022/day5_ukraine/data/tif_data/10_DEM_y40x20.tif
+./2022/day5_ukraine/data/tif_data/10_DEM_y40x30.tif
+./2022/day5_ukraine/data/raster_data/UKR_adm0.shp
+./2022/day5_ukraine/day5_ukraine.png
+./2022/day21_kontur_pop_dataset/day21_kontour_pop_dataset.png
+./2022/day21_kontur_pop_dataset/data/kontour_pop_cr
+./2022/day21_kontur_pop_dataset/data/kontour_pop_cr.zip
+./2022/day6_network/data/ny_tract_full.RData
+./2022/day6_network/data/zip_code_040114.geojson
+./2022/day2_lines/day2_lines.png
+./2022/day2_lines/data/my_rivers.RData
+./2022/day2_lines/data/HydroRIVERS.RData
+./2022/day18_color_friday_blue/base_map.png
+./2022/day18_color_friday_blue/data/streets.RData
+./2022/day18_color_friday_blue/data/small_streets.RData
+./2022/day8_openstreetmap/data/streets.RData
+./2022/day8_openstreetmap/data/small_streets.RData
+./2022/day8_openstreetmap/data/base_map.png
+./2022/day26_islands/day26_islands2.png
+./2022/day26_islands/data/islands1.png
+./2022/day26_islands/data/bayofislands.jpeg
+./2022/collage/collage2022.png
+./2025/day14_openstreetmap/base_map.png
+./2025/day14_openstreetmap/data/primary.rds
+./2025/day14_openstreetmap/data/secondary.rds
+./2025/day17_new_tool/data/09_2023-1_model-solution.xlsx
+./2025/day21_icons/data/Mag6PlusEarthquakes_1900-2013.xlsx
+./2025/day8_urban/base_map.png
+./2025/day8_urban/data/roads.rds
+./2025/day8_urban/data/buildings.rds
+./2025/day15_fire/day15_fire.png
+./2025/day15_fire/data/pp.rds
+./2025/day15_fire/data/fire_shp.rds
+./2025/day15_fire/data/DL_FIRE_J1V-C2_686477.zip
+./2025/day15_fire/data/VIIRS_2023_coords.csv
+./2025/day9_analog/day9_analog.png
+./2024/day20_osm/data/streets.RDS
+./2024/day20_osm/data/small_streets.RDS
+./2024/day17_collaborative_map/day17_collaborative_map.png
+./2024/day4_hexagons/day4_hexagons.png
+./2024/day27_micromapping/day27_micromapping.png
+./2024/day26_map_projections/data/world.rds
+./2024/day11_artic/day11_artic.png
+./2024/day10_pen&paper/day10_pen&paper.jpg
+./2024/day29_overture/day29_overture.png
+./2024/day29_overture/data/overture-15.73-48.855200000000735-2.3417000000001735.geojson
+./2024/day2_lines/data/ne_10m_rivers_lake_centerlines.zip
+./2024/day2_lines/data/ne_10m_rivers_lake_centerlines/ne_10m_rivers_lake_centerlines.shp
+./2024/day2_lines/data/ne_10m_rivers_lake_centerlines/ne_10m_rivers_lake_centerlines.dbf
+./2024/day22_two_colors/day22_two_colors.png
+./2024/collage/collage2024.png
+./2023/day27_dot/day27_dot.png
+./2023/day27_dot/data/WorldCover_trees_30s.tif
+./2023/day21_raster/data/SR_50M_alaska_nad.tif
+./2023/day21_raster/day21_raster.png
+./2023/day23_3D/original.png
+./2023/day23_3D/day23_3D.png
+./2023/day17_flow/day17_flow.png
+./2023/day25_antarctica/data/g.rds
+./2023/day11_retro/data/german_empire_1945/German_Empire_1945_v.1.0.shp
+./2023/day11_retro/data/germany_1989/Germany_1989_v.1.0.shp
+./2023/day11_retro/data/german_empire_1871/German_Empire_1871_v.1.0.shp
+./2023/day2_lines/data/cdl_30m_r_ny_2022_utm18.tif
+./2023/day10_north-america/data/EventMapLayer.kml
+./2023/day15_openstreetmap/day15_openstreetmap.png
+./2023/day7_navigation/data/3D flights of European free-tailed bats.csv
+./2023/collage/collage2023.png
+./2023/day18_atmosphere/day18_atmosphere.png
+./images/30dmc_2023.png
+./images/30dmc_2024.png
+./2021/day25_interactive/interactive.png
+./2021/day15_nopc/IMG_1518.JPG
+./2021/day20_movement/movement.png
+./2021/day20_movement/movement_alitalia.png
+./2021/day22_boundaries/boundaries.png
+./2021/day5_osm/osmdata.png
+./2021/day24_historical/historical.png
+./2021/day8_blue/raster/IDE00422.202111072100.tiff
+./2021/day8_blue/raster/IDE00421.202111072100.tiff
+./2021/day4_hexagons/boston_city.png
+./2021/day4_hexagons/hexagons.png
+./2021/day14_newtool/newtool.png
+./2021/day21_elevation/elevation.png
+./2021/day28_earth_not_flat/earth_not_flat.png
+./2021/day27_heatmap/heatmap.png
+./2021/day30_metamapping/metamapping.png
+./2021/day26_choropleth/choropleth.png
+./2021/day12_population/world_map.png
+./2021/day18_water/water.png
+./2021/day6_red/drought_red.gif
+./2021/day17_land/land_smaller.png
+./2021/day17_land/land.png
+./2021/day17_land/unfolded.png
+./2021/day29_null/NULL.png
+./2021/day10_raster/raster2.png
+./2021/collage/collage2021.png
+./2021/day11_3D/IDE00427.202111110800.tif
+./2021/day11_3D/3D.png
+./2021/day11_3D/world_3D.png
+./.gitignore
+./.git/objects/pack/pack-c6f651a8ba3d4009de213d45f85fa9c76de8e4b6.pack
+./.git/objects/pack/pack-9392d52fc4ad0386f68b98f4d56cfb07881f4c7e.pack
+./.Rproj.user/shared/notebooks/99517FAA-day28_the_blue_planet/1/s/ch83bwninca36/000006.snapshot
+./.Rproj.user/shared/notebooks/05D793CC-day8_urban/1/s/cc2ma1ecmywxb/000012.snapshot
+./.Rproj.user/shared/notebooks/05D793CC-day8_urban/1/s/c6vh1cjunic93/00001a.snapshot
+./.Rproj.user/shared/notebooks/05D793CC-day8_urban/1/s/crwsz87ukvuhr/000012.snapshot
+./.Rproj.user/shared/notebooks/88D2CC3F-day2_lines/1/s/c0725kotnxzdt/000010.snapshot
+./.Rproj.user/shared/notebooks/AC93E7DE-day5_a-journey/1/s/ckc8urkcj1o2n/000019.snapshot
+./.Rproj.user/shared/notebooks/AC93E7DE-day5_a-journey/1/s/cx4s9lwumbxme/00000a.snapshot
+./.Rproj.user/shared/notebooks/7D16EC2D-day16_cell/1/s/c0n0d4i6vxcop/000014.snapshot
+./.Rproj.user/shared/notebooks/7D16EC2D-day16_cell/1/s/c3uqqfih71nen/000010.snapshot
+./.Rproj.user/shared/notebooks/5B857ECA-day23_memory/1/s/cy6usohfv3sjd/00002a.snapshot
+./.Rproj.user/shared/notebooks/509D77D7-day18_out_of_this_world/1/s/cwglr47bzmebw/00000e.snapshot
+./.Rproj.user/shared/notebooks/36D4E3C6-day22_natural_earth/1/s/cx7zyebs1ke2p/000043.snapshot
+./.Rproj.user/shared/notebooks/42A4FBC2-day12_map_from_2125/1/s/ciyq3su86bl2h/000018.snapshot
+./.Rproj.user/shared/notebooks/42A4FBC2-day12_map_from_2125/1/s/cxx1r4mugs5q5/000094.snapshot
+./.Rproj.user/shared/notebooks/42A4FBC2-day12_map_from_2125/1/s/cr417mlosthpz/000018.snapshot
+./.Rproj.user/shared/notebooks/24FCDD4E-day14_openstreetmap/1/s/cqem608nnxjmb/000002.snapshot
+./.Rproj.user/shared/notebooks/24FCDD4E-day14_openstreetmap/1/s/ct4it29rmtayo/000007.snapshot
+./.Rproj.user/shared/notebooks/B957DDE2-day6_dimensions/1/s/c5a9c72yu78b6/000016.snapshot
+./.Rproj.user/shared/notebooks/B957DDE2-day6_dimensions/1/s/cd9w986ugyrvo/000033.snapshot
+./.Rproj.user/shared/notebooks/DB8DB097-day19_projections/1/s/c2b33cse5w7ap/000010.snapshot
+./.Rproj.user/shared/notebooks/DB8DB097-day19_projections/1/s/cu0aptcnifv3c/000010.snapshot
+./.Rproj.user/shared/notebooks/DB8DB097-day19_projections/1/s/c69rd9m835dsk/000010.snapshot
+./.Rproj.user/shared/notebooks/08D33BAC-day30_the_final_map/1/s/c5aibzttgtqxz/000016.snapshot
+./.Rproj.user/shared/notebooks/90AF16E3-day25_heat/1/s/copj27fkeysu1/00001c.snapshot
+./.Rproj.user/shared/notebooks/90AF16E3-day25_heat/1/s/ctj30uop76dh6/000002.snapshot
+./.Rproj.user/shared/notebooks/CE3309A9-day15_fire/1/s/cvsketfwik7oq/000010.snapshot
+./.Rproj.user/shared/notebooks/CE3309A9-day15_fire/1/s/c8hwnwsjzx4lz/000004.snapshot
+./.Rproj.user/shared/notebooks/CE3309A9-day15_fire/1/s/c791mirngx5w5/000010.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cgpnln4mgdx0h/000012.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/c0plv352cev1u/000016.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cxe8hqj0uif00/00001c.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cut0p7jy4lyua/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/cu866rx66htko/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/crtvxts89oqdx/000003.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/czli8o6vasjl1/000014.rdf
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/c2eryhatfco2k/000002.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/c0efivn537vv0/000012.snapshot
+./.Rproj.user/shared/notebooks/5C9E8529-day8_hdx/1/s/czj7umzbx1ocb/000002.snapshot
+./.Rproj.user/shared/notebooks/383DAA7F-day20_water/1/s/cp3q4ch4fvz4o/000026.snapshot
+./.Rproj.user/shared/notebooks/3AB642D4-day27_micromapping/1/s/cbhk8iztkqwgj/00004b.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/cb2orus6n566w/000012.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/c749ern8nwdx5/000010.rdf
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/c1eswgchzcoir/000010.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/cnl8a7gwntxxw/000010.snapshot
+./.Rproj.user/shared/notebooks/10194A0E-day2_lines/1/s/cc8eag5l25oft/000010.snapshot
+./.Rproj.user/shared/notebooks/135958F5-day3_polygons/1/s/cv2y69fstng9w/000012.snapshot
+./.Rproj.user/shared/notebooks/34143955-day4_my_data/1/s/c7tqpznzj8d8t/000018.snapshot
+./.Rproj.user/shared/notebooks/34143955-day4_my_data/1/s/c8r5uh1z6d67b/000015.snapshot
+./.Rproj.user/shared/notebooks/34143955-day4_my_data/1/s/c11o9ksppb7eo/000016.snapshot
+./.Rproj.user/shared/notebooks/3FD981A5-day5_earth/1/s/cewrsmjlhgtma/000012.snapshot
+./.Rproj.user/shared/notebooks/3FD981A5-day5_earth/1/s/cjz8azzvhoh4p/000012.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/chup3bj0scdmo/000014.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/cvt4tolw5wu3m/000011.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/ctv5os5shqaf7/000012.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/c8tn21o37lq29/000018.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/c9o8n7hogck71/000028.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/cfsmx7hlrqkbp/000002.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/c85p8ppaolejk/000011.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/csrkkl794etub/000002.snapshot
+./.Rproj.user/shared/notebooks/6F67CEA0-day11_artic/1/s/co98wo4qb07ei/000002.snapshot
+./.Rproj.user/shared/notebooks/18BC8A47-day21_conflicts/1/s/cb83dxl6nbg9d/000045.snapshot
+./.Rproj.user/shared/notebooks/18BC8A47-day21_conflicts/1/s/cw6hkw0yjmt13/000012.snapshot
+./.Rproj.user/shared/notebooks/CCC63F34-day16_choropleth_map/1/s/cpfve80qdi5og/00004b.snapshot
+./.Rproj.user/shared/notebooks/CCC63F34-day16_choropleth_map/1/s/czb5olbqu8lan/00002f.snapshot
+./.Rproj.user/shared/notebooks/0C04A5B6-day10_air/1/s/cupcr93co7aif/000002.snapshot
+./.Rproj.user/shared/notebooks/69A25704-day9_ai/1/s/coiequd2w7eam/000018.snapshot
+./.Rproj.user/shared/notebooks/8E50AC33-day24_only_circular_shapes/1/s/cm16v0qlspzg3/000010.snapshot
+./.Rproj.user/shared/notebooks/8266D3CE-day7_vintage/1/s/cn2wkpemjsa8q/00001d.snapshot
+./.Rproj.user/shared/notebooks/63A8CD40-day20_osm/1/s/ck18zwkkm4f3j/000023.snapshot
+./.Rproj.user/shared/notebooks/63A8CD40-day20_osm/1/s/cpvpm7e7prl9j/00003f.snapshot
+./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/2A616F33eae359fe/cm3k71lfwadom/000012.snapshot
+./.Rproj.user/shared/notebooks/8EB5F337-day26_map_projections/1/s/cm3k71lfwadom/00002a.snapshot
